# Registro_Asistencia

./: README.md  pyproject.toml
registro_asistencia/: hooks.py  install.py  modules.txt
registro_asistencia/config/: desktop.py
registro_asistencia/public/css/: registro_asistencia.css
registro_asistencia/public/js/: app_settings.js  registro_asistencia.js
registro_asistencia/registro_de_asistencia/: check_employee.py  registro_asistencia.py
registro_asistencia/registro_de_asistencia/doctype/app_settings/: app_settings.json  app_settings.py
registro_asistencia/registro_de_asistencia/web_form/app_settings/: app_settings_web_form.json
registro_asistencia/www/: registro_asistencia.html
